# demo1

./: .gitignore  .gitmodules  .projectile  CMakeLists.txt  basic.vert  choreo.rocket  main.cpp  noise.frag  quine.frag  rebuild_ccls_cache.sh  rm_test.frag
include/glad/: glad.h
include/utils/: fonts.h
shaders/: basicFrag.frag  basicVert.vert
source/: main.cpp
source/utils/: ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
vendors/glad/src/: glad.c
